--- a/src/w6/style/card.css
+++ b/src/w6/style/card.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Cute+Font&family=Gothic+A1&family=Gugi&family=Noto+Sans+KR:wght@100..900&family=Yarndings+12+Charted&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Orbit&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Orbit&display=swap");
 
 * {
   box-sizing: border-box;
